--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "autoprefixer": "^10.4.18",
     "gsap": "^3.12.5",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-loading-skeleton": "^3.5.0"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
